--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2202,11 +2202,10 @@ input[type="radio"]:checked::after {
   box-shadow: none;
   background-color: var(--background-color);
   border: 1px solid var(--accent-color);
+  overflow: hidden;
 }
 
 .flatpickr-months {
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
   background-color: var(--accent-color);
 }
 
@@ -2289,8 +2288,13 @@ input[type="radio"]:checked::after {
 
 .flatpickr-day.selected {
   background: var(--accent-color);
-    border-color: var(--accent-color);
+  border-color: var(--accent-color);
 }
+
+
+
+
+
 
 
 
